<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyberwalkabout.youtube.lib.SubmitVideoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/image"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/submit_video_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_light" />

        <LinearLayout
            android:id="@+id/enterDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/languageLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Language:"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/primary_text_light"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/languageTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ageLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Age:"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/primary_text_light"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/ageSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/submit_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterDataContainer"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/submit_video"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/submit_video_notice"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="italic" />

    </RelativeLayout>
</ScrollView>